--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">RemindMe</string>
+    <string name="toolbar_title">Nächster Termin</string>
+    <string name="search_title">Suche</string>
 </resources>
