--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="zukunft">Zukunft</string>
+    <string name="Neutermin">Neue Termin hinzufügen</string>
     <string name="datum">Datum</string>
     <string name="letzte">Letzte</string>
 </resources>
