--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
-    <string name="app_name">RemindMe</string>
-    <string name="toolbar_title">Nächster Termin</string>
+    <string name="app_name">Termin</string>
+    <string name="toolbar_title">Ihre Termin</string>
     <string name="search_title">Suche</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="zukunft">Zukunft</string>
     <string name="Neutermin">Neue Termin hinzufügen</string>
-    <string name="datum">Datum</string>
+    <string name="datum">Kalender</string>
     <string name="letzte">Letzte</string>
 </resources>
