Implement code for change language

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="Neutermin">Neue Termin hinzufügen</string>
     <string name="datum">Kalender</string>
     <string name="letzte">Letzte</string>
+    <string name="sprache">sprache</string>
+    <string name="Deutsch" translatable="false">Deutsch</string>
+    <string name="Russian" translatable="false" >Русский</string>
+    <string name="English" translatable="false">English</string>
 </resources>
