--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="high">Hoch</string>
     <string name="middle">Mitte</string>
     <string name="low">Niedrig</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
     <string-array name="categories">
         <item>@string/medicine</item>
         <item>@string/job</item>
