--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="low">Niedrig</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+    <string name="time">Time</string>
     <string-array name="categories">
         <item>@string/medicine</item>
         <item>@string/job</item>
