--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,8 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="time">Time</string>
+    <string name="save">Speichern</string>
+
     <string-array name="categories">
         <item>@string/medicine</item>
         <item>@string/job</item>
